--- a/GaugeSite/appsettings.json
+++ b/GaugeSite/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
       }
     },
-"AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": 
+  {
+    "GaugeConnection":"Server=12gserver.database.windows.net,1433"  
+  }
 }
